--- a/Logit Leaf Model allen.ipynb
+++ b/Logit Leaf Model allen.ipynb
@@ -245,7 +245,7 @@
     }
    ],
    "source": [
-    "df=pd.read_csv('C:\\Users\\Shardul Kolekar\\OneDrive\\Desktop\\GITHUB\\Logit leaf model\\WA_Fn-UseC_-Telco-Customer-Churn.csv')\n",
+    "df=pd.read_csv('C:\\Users\\allen\\OneDrive\\Desktop\\GITHUB\\Logit leaf model\\WA_Fn-UseC_-Telco-Customer-Churn.csv')\n",
     "df.head()"
    ]
   },
@@ -2779,7 +2779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
